# ChangeLog for app-shells/ksh
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/ksh/ChangeLog,v 1.38 2008/11/10 23:30:03 darkside Exp $

*ksh-93.20081104 (10 Nov 2008)

  10 Nov 2008; Jeremy Olexa <darkside@gentoo.org> -ksh-93.20080725.ebuild,
  +ksh-93.20081104.ebuild:
  (non maintainer commit) version bump and remove old

  10 Nov 2008; Jeremy Olexa <darkside@gentoo.org> ksh-93.20071105.ebuild:
  amd64 stable

*ksh-93.20080725 (02 Oct 2008)

  02 Oct 2008; Jeremy Olexa <darkside@gentoo.org> -ksh-93.20040229.ebuild,
  +ksh-93.20080725.ebuild:
  (non-maintainer commit) version bump app-shells/ksh for bug 230097, simple
  rename. remove old

  06 Feb 2008; nixnut <nixnut@gentoo.org> ksh-93.20071105.ebuild:
  stable on ppc wrt bug #140705

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  -files/ksh-20050202-uname.patch, -files/ksh-20060124-syntax.patch,
  -files/ksh-20060214-ed.patch, -ksh-93.20030724.ebuild,
  -ksh-93.20050202.ebuild, -ksh-93.20060214.ebuild,
  -ksh-93.20060214-r1.ebuild, -ksh-93.20070628.ebuild,
  ksh-93.20071105.ebuild:
  alpha/ia64/sparc/x86 stable, remove old

*ksh-93.20071105 (28 Jan 2008)

  28 Jan 2008; Raúl Porcel <armin76@gentoo.org> +ksh-93.20071105.ebuild:
  Version bump, fix bug #145400

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing taviso from metadata.xml as per #202471. Assigning to
  maintainer-needed.

  05 Jul 2007; Tavis Ormandy <taviso@gentoo.org> ksh-93.20070628.ebuild:
  sync releases correctly #184231

*ksh-93.20070628 (02 Jul 2007)

  02 Jul 2007; Tavis Ormandy <taviso@gentoo.org> +ksh-93.20070628.ebuild:
  bump

  29 Apr 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/ksh-20060214-ed.patch, ksh-93.20060214-r1.ebuild:
  Add patch from kevquinn for bug #165982.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  13 Oct 2006; Markus Rothe <corsair@gentoo.org> ksh-93.20060214-r1.ebuild: