@@ -6,7 +6,7 @@ DIST INIT.2008-11-04.tgz 350821 RMD160 c8e977d3b245173747dcc4e9d55f03d4aa4e379d 
 DIST ast-ksh-locale.2007-11-05.tgz 621289 RMD160 ca766ab613eb07553683785204272df909984307 SHA1 bf9b12dbd1f60dc8c504ed83a338b2a1b6e16b13 SHA256 fdbac41d366f64b37ee3c64555de1b9dd4252ec4c908d4353d7e2ffdfce5a970
 DIST ast-ksh.2007-11-05.tgz 1675958 RMD160 16b762ab7da6ad974f7773a772c8ab0f736e9734 SHA1 17c83bb64d80a3a9670bdfdc245e069ac7414de6 SHA256 36bac8b479a656102746961f1cc22a81dd62e304279130cce7d9a0d8c6734a4d
 DIST ast-ksh.2008-11-04.tgz 1778053 RMD160 770e54e1a062f333e284bc07590b096ef79bf7a4 SHA1 289c933a3e5fbd041d900886ed94b3b4b01998b4 SHA256 0e55644bce1ebc739850ea326e6ee6c09db833d91a067de1aa921a096b15ef30
-EBUILD ksh-93.20071105.ebuild 1991 RMD160 78b21891567a04a9743ba972bc964de0ec9bd8e1 SHA1 0ea297f0ecf833d554382dd43c755998ddd8f3cd SHA256 3ed940667414cd76dbc5149fb8d77ead6432bad041aa46cbb7a2997cd601ea37
-EBUILD ksh-93.20081104.ebuild 2004 RMD160 965988e1be8ea95eebf7968f1ea0f04a59bc1bf3 SHA1 55ae1fdbd61707f3ed2193e4622f9c90809c2992 SHA256 babe38bfd16fa2ea59c0d48d78729757426559b712bdab8e7c3bdf083f76ef2b
-MISC ChangeLog 5044 RMD160 9443d35992736bc1d6a2912bc7cbe3504075b6bb SHA1 81882d76806416776758f9f0d040a233900cbe02 SHA256 d84ed8027a67b4e5a35ffbf368f3ab2038b62d9a4847312f8f37c3e68a7388ac
+EBUILD ksh-93.20071105.ebuild 2025 RMD160 eb68a2159fc1d1a123d749d3ced216f339fb3eaf SHA1 84d3e567195646bf811f58b58393a713ad7d30bc SHA256 4cdd2dec699f6a072b5c384f08d16f5bda382baec94e7cc8a589f3e8ca04c37a
+EBUILD ksh-93.20081104.ebuild 2038 RMD160 0618dfee4f2e6dabdf138ac9ae762f30e0bae7ed SHA1 982c7d2ab8e81c694844a5187dd0e612f76fc96d SHA256 917a0b05b17e3456d7287167a5979abca3ae637a7f178ba77c70d16e5c197044
+MISC ChangeLog 5260 RMD160 30da13d09b1e8feae437a9b01f9b3da03a45bb41 SHA1 248bc2a310b896eb652849f1fc8708a01e044695 SHA256 ff0ec355e3c449c343c2d19c66865b195871d823df7a9ce634c742d5aee7c317
 MISC metadata.xml 1289 RMD160 2b4029b2b939fbf211946c34ed91e7a6bdf9aae1 SHA1 d97c3b3063deaaee0440108cc3e0fa873c5b97b4 SHA256 6b2cda03debe55486727e7408c0f98103848c533be2c6a72fb8584b368ae948e
