@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/ksh/ksh-93.20081104.ebuild,v 1.1 2008/11/10 23:30:03 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/ksh/ksh-93.20081104.ebuild,v 1.2 2009/09/06 19:05:41 idl0r Exp $
 
 inherit eutils flag-o-matic toolchain-funcs autotools prefix
 
@@ -20,25 +20,26 @@ KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~x86-macos ~sparc-solaris ~sparc6
 IUSE="nls"
 
 DEPEND="!app-shells/pdksh"
+RDEPEND=""
 
 S=${WORKDIR}
 
 src_unpack() {
 	# the AT&T build tools look in here for packages.
-	mkdir -p ${S}/lib/package/tgz
+	mkdir -p "${S}"/lib/package/tgz
 
 	# move the packages into place.
-	cp ${DISTDIR}/ast-ksh.${RELEASE}.tgz ${S}/lib/package/tgz/ || die
+	cp "${DISTDIR}"/ast-ksh.${RELEASE}.tgz "${S}"/lib/package/tgz/ || die
 
 	if use nls; then
-		cp ${DISTDIR}/ast-ksh-locale.${LOCALE_RELEASE}.tgz ${S}/lib/package/tgz/ || die
+		cp "${DISTDIR}"/ast-ksh-locale.${LOCALE_RELEASE}.tgz "${S}"/lib/package/tgz/ || die
 	fi
 
 	# INIT provides the basic tools to start building.
 	unpack INIT.${INIT_RELEASE}.tgz
 
 	# `package read` will unpack any tarballs put in place.
-	${S}/bin/package read || die
+	"${S}"/bin/package read || die
 
 	epatch "${FILESDIR}/${PN}-93.20080725-darwin-jobs.patch"
 	epatch "${FILESDIR}/${PN}-prefix.patch"
@@ -48,27 +49,27 @@ src_unpack() {
 src_compile() {
 	strip-flags; export CCFLAGS="${CFLAGS}"
 
-	cd ${S}; ./bin/package only make ast-ksh CC="$(tc-getCC)" || die
+	cd "${S}"; ./bin/package only make ast-ksh CC="$(tc-getCC)" || die
 
 	# install the optional locale data.
 	if use nls; then
-		cd ${S}; ./bin/package only make ast-ksh-locale CC="$(tc-getCC)"
+		cd "${S}"; ./bin/package only make ast-ksh-locale CC="$(tc-getCC)"
 	fi
 }
 
 src_install() {
 	exeinto /bin
 
-	doexe ${S}/arch/*.*/bin/ksh || die
+	doexe "${S}"/arch/*.*/bin/ksh || die
 
-	newman ${S}/arch/*.*/man/man1/sh.1 ksh.1
+	newman "${S}"/arch/*.*/man/man1/sh.1 ksh.1
 
 	dodoc lib/package/LICENSES/ast
 	dohtml lib/package/ast-ksh.html
 
 	if use nls; then
 		dodir /usr/share
-		mv ${S}/share/lib/locale ${ED}/usr/share
-		find ${ED}/usr/share/locale -type f -name 'LC_TIME' -exec rm -rf {} \; 2>/dev/null
+		mv "${S}"/share/lib/locale "${ED}"/usr/share
+		find "${ED}"/usr/share/locale -type f -name 'LC_TIME' -exec rm -rf {} \; 2>/dev/null
 	fi
 }
